--- a/index.html
+++ b/index.html
@@ -6,5 +6,31 @@
     <title>Calculator</title>
     <script src="main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="display">ffffff</div>
+      <div class="operation">
+        <div class="numbers">
+          <button id="clear">Clear</button>
+          <button>0</button>
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+        </div>
+        <div class="operators">
+          <button id="add">+</button>
+          <button id="subtract">-</button>
+          <button id="multiply">x</button>
+          <button id="divide">/</button>
+          <button id="equals">=</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
