--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="display">ffffff</div>
+      <div class="display"></div>
       <div class="operation">
         <div class="numbers">
-          <button id="clear">Clear</button>
           <button>0</button>
           <button>1</button>
           <button>2</button>
@@ -28,8 +27,9 @@
           <button id="subtract">-</button>
           <button id="multiply">x</button>
           <button id="divide">/</button>
-          <button id="equals">=</button>
         </div>
+        <button id="equals">=</button>
+        <button id="clear">Clear</button>
       </div>
     </div>
   </body>
