--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button id="divide">/</button>
         </div>
         <button id="equals">=</button>
-        <button id="clear">Clear</button>
+        <button id="clear">AC</button>
       </div>
     </div>
   </body>
