--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="display"></div>
+      <div class="display">0</div>
       <div class="operation">
         <div class="numbers">
           <button>0</button>
