--- a/index.html
+++ b/index.html
@@ -3,33 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
+    <title>Calculator</title>
   </head>
   <body>
     <div class="container">
       <div class="display">0</div>
       <div class="operation">
         <div class="numbers">
-          <button>0</button>
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
-          <button>7</button>
-          <button>8</button>
           <button>9</button>
+          <button>8</button>
+          <button>7</button>
+          <button>6</button>
+          <button>5</button>
+          <button>4</button>
+          <button>3</button>
+          <button>2</button>
+          <button>1</button>
+          <button class="dot">.</button>
+          <button>0</button>
         </div>
         <div class="operators">
+          <button id="clear">AC</button>
           <button id="add">+</button>
           <button id="subtract">-</button>
           <button id="multiply">x</button>
           <button id="divide">/</button>
+          <button id="equals">=</button>
         </div>
-        <button id="equals">=</button>
-        <button id="clear">AC</button>
       </div>
     </div>
   </body>
