--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="display">0</div>
+      <div class="displays">
+        <div class="display-one">0</div>
+        <div class="display-two">...</div>
+      </div>
       <div class="operation">
         <div class="numbers">
           <button>9</button>
