--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <button id="add">+</button>
           <button id="subtract">-</button>
           <button id="multiply">x</button>
-          <button id="divide">/</button>
+          <button id="divide">÷</button>
           <button id="equals">=</button>
         </div>
       </div>
