--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <button>3</button>
           <button>2</button>
           <button>1</button>
+          <button class="del">⌫</button>
           <button class="dot">.</button>
           <button>0</button>
         </div>
